--- a/Pipfile
+++ b/Pipfile
@@ -8,6 +8,8 @@ verify_ssl = true
 [packages]
 python-telegram-bot = "*"
 environs = "*"
+pyyaml = "*"
+numpy = "*"
 
 [requires]
 python_version = "3.7"
